--- a/config.properties
+++ b/config.properties
@@ -3,5 +3,8 @@ accessKey=YOUR_ACCESSKEY
 secretKey=YOUR_SECRETKEY
 bucket=YOUR_BUCKET_NAME
 bucket_domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
+#前缀信息
 markdownPrefix=!(image)[
 markdownSuffix=]
+#窗口提示false关闭
+windowTips=true
