--- a/config.properties
+++ b/config.properties
@@ -3,8 +3,11 @@ accessKey=YOUR_ACCESSKEY
 secretKey=YOUR_SECRETKEY
 bucket=YOUR_BUCKET_NAME
 bucket_domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
+
 #连接格式化前缀后缀
 markdownPrefix=!(image)[
 markdownSuffix=]
-#窗口提示，false关闭
+#窗口提示 false关闭
 windowTips=true
+#自动粘贴 false关闭
+autoPaste=true
