--- a/config.properties
+++ b/config.properties
@@ -1,13 +1,21 @@
-#七牛云存储信息
-accessKey=YOUR_ACCESSKEY
-secretKey=YOUR_SECRETKEY
-bucket=YOUR_BUCKET_NAME
-bucket_domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
-
-#连接格式化前缀后缀
-markdownPrefix=![image](
-markdownSuffix=)
+#global
 #窗口提示 false关闭
-windowTips=true
+window.tips=true
+#upload ctrl + alt + v
+#七牛云存储信息
+access.key=YOUR_ACCESSKEY
+secret.key=YOUR_SECRETKEY
+bucket=YOUR_BUCKET_NAME
+bucket.domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
+#连接格式化前缀后缀
+markdown.prefix=![image](
+markdown.suffix=)
 #自动粘贴 false关闭
-autoPaste=true
+auto.paste=true
+#sendToKindle ctrl + alt + k
+mail.smtp.host=smtp.qq.com
+mail.sender.username=YOUR_EMAIL
+mail.sender.pass=YOUR_EMAIL_PASS
+mail.receiver.username=YOUR_KINDLE_EMAIL
+#发送完成后自动删除转换后的文件
+auto.delete=true
