--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.scruel</groupId>
-    <artifactId>clipboardUpload</artifactId>
-    <version>1.2.0-RELEASE</version>
-
+    <artifactId>clipIt</artifactId>
+    <version>1.3.2-RELEASE</version>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
-
     <dependencies>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -54,7 +68,7 @@
                         <configuration>
                             <!-- 默认值为true.注意这个属性,如果你用这个插件来deploy,或者发布到中央仓库，这个属性会缩减你的pom文件,会把你依赖的<dependency>干掉 -->
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <minimizeJar>true</minimizeJar>
+                            <!--<minimizeJar>true</minimizeJar>-->
                             <finalName>${artifactId}</finalName>
                             <transformers>
                                 <transformer
