--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.scruel</groupId>
   <artifactId>clipIt</artifactId>
-  <version>1.3.2-RELEASE</version>
+  <version>1.3.3-RELEASE</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -74,7 +74,7 @@
                 <transformer
                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <!-- 这个是你的程序入口文件 -->
-                  <mainClass>com.scruel.Main</mainClass>
+                  <mainClass>pers.scruel.Main</mainClass>
                 </transformer>
               </transformers>
             </configuration>
