refactor code, add Action classes.

--- a/config.properties
+++ b/config.properties
@@ -1,21 +1,27 @@
-#global
-#窗口提示 false关闭
+# Global
+## 窗口提示 false关闭
 window.tips=true
-#upload ctrl + alt + v
-#七牛云存储信息
-access.key=YOUR_ACCESSKEY
-secret.key=YOUR_SECRETKEY
-bucket=YOUR_BUCKET_NAME
-bucket.domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
-#连接格式化前缀后缀
+## 自动粘贴 false关闭
+auto.paste=true
+# upload ctrl + alt + v
+## 七牛云存储信息
+qiniu.access.key=YOUR_ACCESSKEY
+qiniu.secret.key=YOUR_SECRETKEY
+qiniu.bucket=YOUR_BUCKET_NAME
+qiniu.bucket.domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
+## 连接格式化前缀后缀
 markdown.prefix=![image](
 markdown.suffix=)
-#自动粘贴 false关闭
-auto.paste=true
-#sendToKindle ctrl + alt + k
-mail.smtp.host=smtp.qq.com
-mail.sender.username=YOUR_EMAIL
-mail.sender.pass=YOUR_EMAIL_PASS
-mail.receiver.username=YOUR_KINDLE_EMAIL
-#发送完成后自动删除转换后的文件
-auto.delete=true
+# sendToKindle ctrl + alt + k
+# 收发信箱设置
+stk.mail.smtp.host=smtp.qq.com
+stk.mail.sender.username=YOUR_EMAIL
+stk.mail.sender.pass=YOUR_EMAIL_PASS
+stk.mail.receiver.username=YOUR_KINDLE_EMAIL
+## 发送完成后自动删除转换后的文件
+stk.auto.delete=true
+# ocr ctrl + alt + o
+baiduyun.api.id=YOUR_APIID
+baiduyun.api.key=YOUR_APIKEY
+baiduyun.secret.key=YOUR_SECRETKEY
+
