--- a/config.properties
+++ b/config.properties
@@ -5,10 +5,10 @@ window.tips=true
 auto.paste=true
 # upload ctrl + alt + v
 ## 七牛云存储信息
-qiniu.access.key=YOUR_ACCESSKEY
-qiniu.secret.key=YOUR_SECRETKEY
-qiniu.bucket=YOUR_BUCKET_NAME
-qiniu.bucket.domain=YOUR_BUCKET_TESTDOMAIN LIKE http://xx.com
+qiniu.access.key=YOUR_QINIU_ACCESSKEY
+qiniu.secret.key=YOUR_QINIU_SECRETKEY
+qiniu.bucket=YOUR_QINIU_BUCKET_NAME
+qiniu.bucket.domain=YOUR_QINIU_BUCKET_TESTDOMAIN LIKE http://xx.com
 ## 连接格式化前缀后缀
 markdown.prefix=![image](
 markdown.suffix=)
@@ -21,7 +21,7 @@ stk.mail.receiver.username=YOUR_KINDLE_EMAIL
 ## 发送完成后自动删除转换后的文件
 stk.auto.delete=true
 # ocr ctrl + alt + o
-baiduyun.api.id=YOUR_APIID
-baiduyun.api.key=YOUR_APIKEY
-baiduyun.secret.key=YOUR_SECRETKEY
+baiduyun.api.id=YOUR_BAIDUYUN_APIID
+baiduyun.api.key=YOUR_BAIDUYUN_APIKEY
+baiduyun.secret.key=YOUR_BAIDUYUN_SECRETKEY
 
