self hotkey support&remove AutoHotKey.

--- a/config.properties
+++ b/config.properties
@@ -1,26 +1,26 @@
-# Global
-## 窗口提示 false关闭
+#### Global ####
+# 窗口提示 false关闭
 window.tips=true
-## 自动粘贴 false关闭
+# 自动粘贴 false关闭
 auto.paste=true
-# upload ctrl + alt + v
-## 七牛云存储信息
+#### 文件上传 ####
+# 七牛云存储信息
 qiniu.access.key=YOUR_QINIU_ACCESSKEY
 qiniu.secret.key=YOUR_QINIU_SECRETKEY
 qiniu.bucket=YOUR_QINIU_BUCKET_NAME
 qiniu.bucket.domain=YOUR_QINIU_BUCKET_TESTDOMAIN LIKE http://xx.com
-## 连接格式化前缀后缀
+# 连接格式化前缀后缀
 markdown.prefix=![image](
 markdown.suffix=)
-# sendToKindle ctrl + alt + k
+#### sendToKindle ####
 # 收发信箱设置
 stk.mail.smtp.host=smtp.qq.com
 stk.mail.sender.username=YOUR_EMAIL
 stk.mail.sender.pass=YOUR_EMAIL_PASS
 stk.mail.receiver.username=YOUR_KINDLE_EMAIL
-## 发送完成后自动删除转换后的文件
+# 发送完成后自动删除转换后的文件
 stk.auto.delete=true
-# ocr ctrl + alt + o
+#### ocr ####
 baiduyun.api.id=YOUR_BAIDUYUN_APIID
 baiduyun.api.key=YOUR_BAIDUYUN_APIKEY
 baiduyun.secret.key=YOUR_BAIDUYUN_SECRETKEY
