--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.scruel</groupId>
   <artifactId>clipIt</artifactId>
-  <version>1.4.2-RELEASE</version>
+  <version>2.0.0-RELEASE</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -28,6 +28,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.melloware/jintellitype -->
+    <dependency>
+      <groupId>com.melloware</groupId>
+      <artifactId>jintellitype</artifactId>
+      <version>1.3.9</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
     <dependency>
@@ -71,9 +77,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <!-- 默认值为true.注意这个属性,如果你用这个插件来deploy,或者发布到中央仓库，这个属性会缩减你的pom文件,会把你依赖的<dependency>干掉 -->
               <createDependencyReducedPom>false</createDependencyReducedPom>
-              <!--<minimizeJar>true</minimizeJar>-->
               <finalName>${artifactId}</finalName>
               <transformers>
                 <transformer
