save images to local before upload.

--- a/config.properties
+++ b/config.properties
@@ -1,15 +1,19 @@
 #### Global ####
-# 窗口提示 false关闭
+# 自动粘贴, false 为关闭
 window.tips=true
-# 自动粘贴 false关闭
+# 自动粘贴, false 为关闭
 auto.paste=true
+
 #### 文件上传 ####
+# 剪贴板图片类文件自动保存到指定目录(绝对路径)
+local.save=true
+local.pathname=D:/ClipIt/images
 # 七牛云存储信息
 qiniu.access.key=YOUR_QINIU_ACCESSKEY
 qiniu.secret.key=YOUR_QINIU_SECRETKEY
 qiniu.bucket=YOUR_QINIU_BUCKET_NAME
 qiniu.bucket.domain=YOUR_QINIU_BUCKET_TESTDOMAIN LIKE http://xx.com
-# 连接格式化前缀后缀
+# 链接前缀后缀的格式
 markdown.prefix=![image](
 markdown.suffix=)
 #### sendToKindle ####
