Convert encoding of config file to UTF-8

--- a/config.properties
+++ b/config.properties
@@ -1,28 +1,27 @@
 #### Global ####
-# ×Ô¶¯Õ³Ìù, false Îª¹Ø±Õ
+# è‡ªåŠ¨ç²˜è´´, false ä¸ºå…³é—­
 window.tips=true
-# ×Ô¶¯Õ³Ìù, false Îª¹Ø±Õ
+# è‡ªåŠ¨ç²˜è´´, false ä¸ºå…³é—­
 auto.paste=true
-
-#### ÎÄ¼şÉÏ´« ####
-# ¼ôÌù°åÍ¼Æ¬ÀàÎÄ¼ş×Ô¶¯±£´æµ½Ö¸¶¨Ä¿Â¼(¾ø¶ÔÂ·¾¶)
+#### æ–‡ä»¶ä¸Šä¼  ####
+# å‰ªè´´æ¿å›¾ç‰‡ç±»æ–‡ä»¶è‡ªåŠ¨ä¿å­˜åˆ°æŒ‡å®šç›®å½•(ç»å¯¹è·¯å¾„)
 local.save=true
 local.pathname=D:/ClipIt/images
-# ÆßÅ£ÔÆ´æ´¢ĞÅÏ¢
+# ä¸ƒç‰›äº‘å­˜å‚¨ä¿¡æ¯
 qiniu.access.key=YOUR_QINIU_ACCESSKEY
 qiniu.secret.key=YOUR_QINIU_SECRETKEY
 qiniu.bucket=YOUR_QINIU_BUCKET_NAME
 qiniu.bucket.domain=YOUR_QINIU_BUCKET_TESTDOMAIN LIKE http://xx.com
-# Á´½ÓÇ°×ººó×ºµÄ¸ñÊ½
+# é“¾æ¥å‰ç¼€åç¼€çš„æ ¼å¼
 markdown.prefix=![image](
 markdown.suffix=)
 #### sendToKindle ####
-# ÊÕ·¢ĞÅÏäÉèÖÃ
+# æ”¶å‘ä¿¡ç®±è®¾ç½®
 stk.mail.smtp.host=smtp.qq.com
 stk.mail.sender.username=YOUR_EMAIL
 stk.mail.sender.pass=YOUR_EMAIL_PASS
 stk.mail.receiver.username=YOUR_KINDLE_EMAIL
-# ·¢ËÍÍê³Éºó×Ô¶¯É¾³ı×ª»»ºóµÄÎÄ¼ş
+# å‘é€å®Œæˆåè‡ªåŠ¨åˆ é™¤è½¬æ¢åçš„æ–‡ä»¶
 stk.auto.delete=true
 #### ocr ####
 baiduyun.api.id=YOUR_BAIDUYUN_APIID
