--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,20 @@
-# four indent
+# two indent
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-tab_width = 4
-indent_size = 4
+tab_width = 2
+indent_size = 2
 # indent_style = tab
 indent_style = space
 insert_final_newline = true
 max_line_length = 120
 # intellij idea
-ij_continuation_indent_size = 8
+ij_continuation_indent_size = 4
 
-[*.{json, yml}]
-indent_size = 2
+[*.xml]
+indent_size = 4
 
 [*.md]
 insert_final_newline = false
