:recycle: Update var name.

--- a/config.properties
+++ b/config.properties
@@ -6,7 +6,7 @@ auto.paste=true
 #### 文件上传 ####
 # 剪贴板图片类文件自动保存到指定目录(绝对路径)
 local.save=true
-local.pathname=D:/ClipIt/images
+local.folder=D:/ClipIt/images
 # 七牛云存储信息
 qiniu.access.key=YOUR_QINIU_ACCESSKEY
 qiniu.secret.key=YOUR_QINIU_SECRETKEY
@@ -27,4 +27,3 @@ stk.auto.delete=true
 baiduyun.api.id=YOUR_BAIDUYUN_APIID
 baiduyun.api.key=YOUR_BAIDUYUN_APIKEY
 baiduyun.secret.key=YOUR_BAIDUYUN_SECRETKEY
-
